--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,10 @@ travis-ci = { repository = "LutzCle/papi-rs" }
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-error-chain = "0.12.1"
 libc = "~0.2"
-papi-sys = "~0.1"
-serde = "~1.0.76"
-serde_derive = "~1.0.79"
-toml = "~0.4.7"
-criterion = { version = "0.3", optional = true }
+# Todo - fix ra1u git before PR
+papi-sys = { git = "https://github.com/ra1u/papi-sys" }
+criterion = { version = "0.5", optional = true }
+serde = "~1.0"
+serde_derive = "~1.0"
+toml = "~0.8"
